<resources>
    <string name="snaplearn">SnapLearn</string>
    <string name="newaccount">Create New Account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_activity_update_card">UpdateCard</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="already_have_a_account">Already have a account?</string>
</resources>