<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Register"
    android:background="#dbe2e9">

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30mm"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="#3B82F6"
        android:textSize="40sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck"
            android:lines="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:lines="1"
            tools:ignore="TouchTargetSizeCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:hint="Confirm the password"

            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck"
            android:lines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_button"
        android:outlineAmbientShadowColor="@color/white"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_a_account"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="register"
            android:text="@string/login"
            android:textColor="#1A1A1A"
            android:textSize="22dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>