<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_gravity="center"
    tools:context=".view.Login"
    android:background="#dbe2e9">

    <ImageView
        android:layout_marginTop="15mm"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/avatar"/>

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bubbles"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:text="Welcome Back"
        android:textColor="#3B82F6"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            tools:ignore="TouchTargetSizeCheck"
            android:fontFamily="@font/be_vietnam_pro_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:hint="@string/password"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="textPassword"
            android:lines="1"
            android:fontFamily="@font/be_vietnam_pro_regular"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#3B82F6"
        android:outlineAmbientShadowColor="@color/white"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/bebas_neue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingStart="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="25sp"
            android:fontFamily="@font/bebas_neue"/>

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="register"
            android:text="Register"
            android:textColor="#1A1A1A"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck"
            android:fontFamily="@font/bebas_neue"/>
    </LinearLayout>
</LinearLayout>